[tool.poetry]
name = "pybmsparser"
version = "0.1.0"
description = ""
authors = ["elferia <a.t.qu.qu.qu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pyparsing = "^2.4.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5"
ipython = "^7.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
